[package]
name = "hnr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
async-recursion = "1.1.1"
crossterm = { version = "0.28.1", features = ["event-stream"] }
chrono = { version = "0.4.38", features = ["serde"] }
color-eyre = "0.6.3"
ratatui = "0.27.0"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.38.1", features = ["full"] }
arc-swap = "1.7.1"
once_cell = "1.19.0"
